--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
     -->
-    <title>React App</title>
+    <title>Employee Directory</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
